tests/baselines/reference/unusedMultipleParameters1InMethodDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters1InMethodDeclaration.ts(4,13): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameters1InMethodDeclaration.ts (1 errors) ====
    
    class Dummy {
        public greeter(person: string, person2: string) {
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
            person2 = "dummy value";
        }
    }